<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upperConstraint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_medium_4"
        android:layout_marginEnd="@dimen/margin_medium_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llUpperBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_5"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRishabh">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium_1"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="@dimen/margin_medium"
                android:text="@string/btn_gifts"
                android:textAllCaps="false"
                android:textSize="@dimen/text_medium_3"
                app:backgroundTint="@color/purple_300" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small_1"
                android:layout_marginEnd="@dimen/margin_small_1"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/black_pale"
                android:gravity="center"
                android:padding="@dimen/margin_medium"
                android:text="@string/btn_trick"
                android:textAllCaps="false"
                android:textSize="@dimen/text_medium_3"
                app:backgroundTint="@color/teal_200" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_1"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/black_pale"
                android:gravity="center"
                android:padding="@dimen/margin_medium"
                android:text="@string/btn_treats"
                android:textAllCaps="false"
                android:textSize="@dimen/text_medium_3"
                app:backgroundTint="@color/pink" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvHey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hey"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRishabh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvHey"
            android:layout_alignStart="@id/tvHey"
            android:text="@string/rishabh"
            android:textColor="@color/purple_600"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHey" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvSentBySanta">

        <LinearLayout
            android:id="@+id/llLower"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="@dimen/margin_medium_5"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMoreGifts">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvHouse"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_medium_1"
                android:layout_weight="1"
                app:cardBackgroundColor="#77303030"
                app:cardCornerRadius="@dimen/margin_medium_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvChristmas">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ivHouse"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_extra_large"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/backgrounds/scenic" />

                    <TextView
                        android:id="@+id/tvHouse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small_2"
                        android:layout_marginBottom="@dimen/margin_small_2"
                        android:text="@string/house"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_medium_3"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ivHouse" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvSocks"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="@dimen/margin_small_1"
                android:layout_marginTop="@dimen/margin_medium_5"
                android:layout_marginEnd="@dimen/margin_small_1"
                android:layout_weight="1"
                app:cardBackgroundColor="#77303030"
                app:cardCornerRadius="@dimen/margin_medium_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvChristmas">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_extra_large"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toTopOf="@+id/tvSocks"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:srcCompat="@tools:sample/backgrounds/scenic" />

                    <TextView
                        android:id="@+id/tvSocks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_medium_1"
                        android:text="@string/socks"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_medium_3"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvToys"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_medium_1"
                android:layout_marginTop="@dimen/margin_medium_5"
                android:layout_weight="1"
                app:cardBackgroundColor="#77303030"
                app:cardCornerRadius="@dimen/margin_medium_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvChristmas">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ivToys"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_extra_large"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toTopOf="@+id/tvToys"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:srcCompat="@tools:sample/backgrounds/scenic" />

                    <TextView
                        android:id="@+id/tvToys"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_medium_1"
                        android:text="@string/toys"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_medium_3"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <TextView
            android:id="@+id/tvViewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMoreGifts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/more_gifts"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvChristmas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_medium_4"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium_4"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/purple_800"
        app:cardCornerRadius="@dimen/margin_small_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upperConstraint">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvMerry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_3"
                android:layout_marginTop="@dimen/margin_large"
                android:fontFamily="serif-monospace"
                android:includeFontPadding="true"
                android:text="@string/merry"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium_5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvChristmas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_3"
                android:fontFamily="serif-monospace"
                android:text="@string/christmas"
                android:textColor="@color/pink"
                android:textSize="@dimen/text_large_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMerry" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:drawableEnd="@drawable/ic_navigate_card_giftcard_18"
                android:text="@string/btn_view_your_gifts"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium"
                app:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvChristmas" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSentBySanta"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        app:cardBackgroundColor="#77303030"
        app:cardCornerRadius="@dimen/margin_medium_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvChristmas">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvSentBySanta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_large"
                android:text="@string/check_letter"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium_3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>